--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -76,7 +76,7 @@
   cursor: pointer;
 }
 
-.guest-button {
+.guest-button, .alt-link-button {
   background-color: white;
   color: #616467;
   border-color: #adadad;
@@ -94,9 +94,11 @@
   padding: 16px 48px 18px;
   min-width: 160px;
   transition-duration: .3s;
+  display: flex;
+  justify-content: center;
 }
 
-.guest-button:hover {
+.guest-button:hover, .alt-link-button:hover {
   background-color: #616467;
   color: white;
   cursor: pointer;
@@ -105,8 +107,4 @@
 .alt-link-text {
   font-weight: 600;
   margin-top: 30px;
-}
-
-.alt-link-button {
-  margin: 20px;
 }
