--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -1,5 +1,4 @@
 .session-form-container {
-  background-color: turquoise;
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
@@ -20,7 +19,6 @@
 }
 
 .session-form {
-  background-color: pink;
   border-bottom: 1px solid lightgray;
   width: 500px;
   margin-top: 30px;
@@ -50,6 +48,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
   font-size: 16px;
+  padding: 5px;
 }
 
 .session-button {
@@ -94,8 +93,6 @@
   padding: 16px 48px 18px;
   min-width: 160px;
   transition-duration: .3s;
-  display: flex;
-  justify-content: center;
 }
 
 .guest-button:hover, .alt-link-button:hover {
@@ -107,4 +104,17 @@
 .alt-link-text {
   font-weight: 600;
   margin-top: 30px;
+}
+
+.alt-link-button {
+  display: flex;
+  justify-content: center;
+  width: 500px;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.session-errors {
+  margin-left: 10px;
+  color: red;
 }
