Add redirect to homepage for logo clicks

--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -18,6 +18,10 @@
   width: 100%;
 }
 
+.form-logo:hover {
+  cursor: pointer;
+}
+
 .session-form {
   border-bottom: 1px solid lightgray;
   width: 500px;
