--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -5,12 +5,31 @@
   right: 0;
   min-height: 54px;
   background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .splash-header img {
-  padding-top: 7px;
-  padding-left: 10px;
+  padding-left: 20px;
   height: 40px;
+}
+
+.splash-header img:hover {
+  cursor: pointer;
+}
+
+.splash-header-links {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.splash-header-links #signup, #signin {
+  color: white;
+  text-decoration: none;
+  padding-right: 30px;
 }
 
 .splash-main {
