Add splash page image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
     <script type="text/javascript">
       window.logoDarkURL = "<%= image_url('logo_dark.png') %>";
+      window.splashURL = "<%= image_url('splash_praise.jpg') %>";
     </script>
   </head>
 
