--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
 
     <script type="text/javascript">
       window.logoDarkURL = "<%= image_url('logo_dark.png') %>";
-      window.splashURL = "<%= image_url('splash_praise.jpg') %>";
+      window.githubURL = "<%= image_url('github.png') %>";
+      window.linkedinURL = "<%= image_url('linkedin.png') %>";
     </script>
   </head>
 
