--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -69,6 +69,7 @@
   outline: none;
   white-space: normal;
   margin: 20px;
+  margin-bottom: 30px;
   padding: 16px 48px 18px;
   min-width: 160px;
   transition-duration: .3s;
@@ -93,10 +94,17 @@
   border-width: 2px;
   outline: none;
   white-space: normal;
-  margin: 20px;
+  margin: 5px;
   padding: 16px 48px 18px;
   min-width: 160px;
   transition-duration: .3s;
+
+  display: flex;
+  justify-content: center;
+  width: 460px;
+  padding-left: 0;
+  padding-right: 0;
+  text-decoration: none;
 }
 
 .guest-button:hover, .alt-link-button:hover {
@@ -108,15 +116,7 @@
 .alt-link-text {
   font-weight: 600;
   margin-top: 30px;
-}
-
-.alt-link-button {
-  display: flex;
-  justify-content: center;
-  width: 460px;
-  padding-left: 0;
-  padding-right: 0;
-  text-decoration: none;
+  margin-bottom: 20px;
 }
 
 .session-errors {
