--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -34,7 +34,7 @@
   display: flex;
   justify-content: center;
   padding-top: 20px;
-  padding-bottom: 15px;
+  padding-bottom: 10px;
   font-size: 16px;
   font-weight: 700;
 }
@@ -51,9 +51,15 @@
   display: flex;
   margin-top: 10px;
   margin-bottom: 10px;
-  font-size: 16px;
-  padding: 5px;
+  font-size: 17px;
+  padding: 10px;
+  border: 1px solid lightgray;
 }
+
+// .form-input:last-child {
+//   margin-bottom: 5px;
+//   padding-bottom: 5px;
+// }
 
 .session-button {
   background-color: #1db954;
@@ -69,6 +75,7 @@
   outline: none;
   white-space: normal;
   margin: 20px;
+  margin-top: 2px;
   margin-bottom: 30px;
   padding: 16px 48px 18px;
   min-width: 160px;
