--- a/app/assets/stylesheets/tracks_index_item.scss
+++ b/app/assets/stylesheets/tracks_index_item.scss
@@ -1,16 +1,40 @@
-.tracks-container {
+.home-wrapper {
+  background-color: black;
   display: flex;
   flex-direction: column;
   font-family: 'Montserrat', sans-serif;
+  color: white;
+  font-size: 25px;
+}
+
+.home-container {
+  background-color: green;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: stretch;
+}
+
+.main-container {
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar-container {
+  background-color: rgba(4, 68, 36, 0.137);
+  width: 15%;
+}
+
+.tracks-container {
+  display: flex;
+  flex-direction: column;
   background-color: pink;
+  font-size: 16px;
 }
 
 .album-photo {
   background-color: rgb(73, 3, 3);
-  font-family: 'Montserrat', sans-serif;
-  color: white;
-  height: 300px;
-  font-size: 30px;
 }
 
 .single-track-container {
@@ -34,4 +58,10 @@
 
 audio {
   padding-right: 15px;
+}
+
+.webplayer-container {
+  background-color: rgb(8, 102, 93);
+  height: 150px;
+  width: 100%;
 }
