--- a/app/assets/stylesheets/tracks_index.scss
+++ b/app/assets/stylesheets/tracks_index.scss
@@ -61,7 +61,9 @@ audio {
 }
 
 .webplayer-container {
-  background-color: rgb(8, 102, 93);
+  background-color: #181818;
+  border-top: 1px solid #282828;
   height: 150px;
   width: 100%;
+  min-width: 620px;
 }
