--- a/app/assets/stylesheets/tracks_index.scss
+++ b/app/assets/stylesheets/tracks_index.scss
@@ -31,6 +31,7 @@
   flex-direction: column;
   background-color: pink;
   font-size: 16px;
+  overflow-y: scroll;
 }
 
 .album-photo {
@@ -63,7 +64,15 @@ audio {
 .webplayer-container {
   background-color: #181818;
   border-top: 1px solid #282828;
-  height: 150px;
+  height: 90px;
   width: 100%;
   min-width: 620px;
+  position: fixed;
+  bottom: 0;
+  font-size: 16px;
+  padding-left: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
