--- a/app/assets/stylesheets/web_player.scss
+++ b/app/assets/stylesheets/web_player.scss
@@ -1,3 +1,37 @@
 .shuffle-on, .loop-on {
   color: #1ed760;
 }
+
+.webplayer-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.webplayer-album {
+  width: 56px;
+  height: 56px;
+  background-color: lightgray;
+  color: black;
+}
+
+.webplayer-info {
+  background-color: blue;
+  display: flex;
+  align-items: center;
+  width: 400px;
+  margin-left: 10px;
+}
+
+.webplayer-details {
+  
+}
+
+.webplayer-track-name {
+  background-color: yellow;
+  margin-left: 10px;
+}
+
+.webplayer-artist {
+  background-color: pink;
+  margin-left: 10px;
+}
