--- a/app/assets/stylesheets/web_player.scss
+++ b/app/assets/stylesheets/web_player.scss
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   padding: 0 16px;
+  color: white;
 }
 
 .webplayer-info {
@@ -84,6 +85,10 @@
   font-size: 30px;
   margin-left: 30px;
   margin-right: 30px;
+}
+
+.play-pause-button:hover {
+  transform: scale(1.1) perspective(0.1px);
 }
 
 .seekbar-container {
