--- a/app/assets/stylesheets/tracks_index.scss
+++ b/app/assets/stylesheets/tracks_index.scss
@@ -27,9 +27,11 @@
 .tracks-container {
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(rgba(0,0,0,.6),#121212);
+  background-color: rgb(26, 25, 25);
   font-size: 16px;
   overflow-y: scroll;
+  padding-top: 15px;
+  padding-bottom: 20px;
 }
 
 .album-photo {
@@ -42,23 +44,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.single-track-container:hover {
+  background-color: rgb(59, 59, 59);
+  transition-duration: .2s;
+  transition-timing-function: linear;
 }
 
 .track-name {
-  color: black;
+  color: white;
   width: 225px;
   padding-left: 15px;
 }
 
 .track-length {
-  color: black;
+  color: white;
   padding-left: 0;
-}
-
-audio {
-  padding-right: 15px;
 }
 
 .webplayer-container {
