--- a/app/assets/stylesheets/web_player.scss
+++ b/app/assets/stylesheets/web_player.scss
@@ -5,9 +5,10 @@
 .webplayer-wrapper {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   padding: 0 16px;
   color: white;
+  overflow-x: scroll;
 }
 
 .webplayer-info {
@@ -97,20 +98,29 @@
   justify-content: center;
   width: 100%;
   font-size: 16px;
-
-  input {
-    min-width: 400px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
 }
 
 .volume-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 400px;
 }
 
 .volume-container p {
   margin-right: 20px;
+}
+
+.seekbar-container input[type=range], .volume-container input[type=range] {
+  border: solid 1px #4e4e4e;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border-radius: 25px;
+  height: 4px;
+  background-color: rgb(184, 183, 183);
+  outline: none;
+}
+
+.seekbar-container input[type=range] {
+  min-width: 400px;
 }
