Separate out header component

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,11 +6,11 @@
   flex-direction: column;
 }
 
-.main-header {
-  background-color: pink;
-  color: black;
-  height: 150px;
-}
+// .main-header {
+//   background-color: pink;
+//   color: black;
+//   height: 150px;
+// }
 
 .main-body {
   width: 100%;
