--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -13,11 +13,21 @@
   justify-content: stretch;
 }
 
+.header-container {
+  background-color: pink;
+  color: black;
+  height: 150px;
+}
+
 .main-container {
   width: 84%;
   display: flex;
   flex-direction: column;
   background-color: rgb(26, 25, 25);
+  overflow-y: scroll;
+  padding-top: 15px;
+  padding-bottom: 20px;
+  font-size: 16px;
 }
 
 .sidebar-container {
