--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -7,10 +7,25 @@
 
 .home-container {
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-direction: row;
   justify-content: stretch;
+}
+
+.sidebar-container {
+  background-color: black;
+  color: white;
+  width: 16%;
+  min-width: 232px;
+}
+
+.main-container {
+  width: 84%;
+  display: flex;
+  flex-direction: column;
+  // background-color: rgb(26, 25, 25);
+  // overflow-y: scroll;
+  // font-size: 16px;
 }
 
 .header-container {
@@ -19,22 +34,42 @@
   height: 150px;
 }
 
-.main-container {
-  width: 84%;
+.main-wrapper {
+  // background-color: rgb(26, 25, 25);
+  // color: white;
+  // font-family: 'Montserrat', sans-serif;
+  // display: flex;
+  // flex-direction: column;
   display: flex;
   flex-direction: column;
   background-color: rgb(26, 25, 25);
+  font-size: 16px;
   overflow-y: scroll;
   padding-top: 15px;
   padding-bottom: 20px;
-  font-size: 16px;
 }
 
-.sidebar-container {
-  background-color: black;
-  color: white;
-  width: 16%;
-  min-width: 232px;
+.artists-index, .albums-index {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.artists-index {
+  background-color: lightblue;
+}
+
+.albums-index {
+  background-color: lightgreen;
+}
+
+#artist-photo {
+  height: 200px;
+  width: 200px;
 }
 
 .webplayer-container {
