--- a/app/assets/stylesheets/tracks_index.scss
+++ b/app/assets/stylesheets/tracks_index.scss
@@ -1,38 +1,38 @@
-// .home-wrapper {
-//   display: flex;
-//   flex-direction: column;
-//   font-family: 'Montserrat', sans-serif;
-//   font-size: 25px;
-// }
+.home-wrapper {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 25px;
+}
 
-// .home-container {
-//   width: 100%;
-//   display: flex;
-//   flex-direction: row;
-//   justify-content: stretch;
-// }
+.home-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: stretch;
+}
 
-// .main-container {
-//   width: 85%;
-//   display: flex;
-//   flex-direction: column;
-// }
+.main-container {
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+}
 
-// .sidebar-container {
-//   background-color: black;
-//   color: white;
-//   width: 15%;
-// }
+.sidebar-container {
+  background-color: black;
+  color: white;
+  width: 15%;
+}
 
-// .tracks-container {
-//   display: flex;
-//   flex-direction: column;
-//   background-color: rgb(26, 25, 25);
-//   font-size: 16px;
-//   overflow-y: scroll;
-//   padding-top: 15px;
-//   padding-bottom: 20px;
-// }
+.tracks-container {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(26, 25, 25);
+  font-size: 16px;
+  overflow-y: scroll;
+  padding-top: 15px;
+  padding-bottom: 20px;
+}
 
 .album-photo {
   background-color: rgb(73, 3, 3);
@@ -67,18 +67,18 @@
   padding-left: 0;
 }
 
-// .webplayer-container {
-//   background-color: #181818;
-//   border-top: 1px solid #282828;
-//   height: 90px;
-//   width: 100%;
-//   min-width: 620px;
-//   position: fixed;
-//   bottom: 0;
-//   font-size: 16px;
-//   padding-left: 20px;
-//   display: flex;
-//   flex-direction: row;
-//   justify-content: space-between;
-//   align-items: center;
-// }
+.webplayer-container {
+  background-color: #181818;
+  border-top: 1px solid #282828;
+  height: 90px;
+  width: 100%;
+  min-width: 620px;
+  position: fixed;
+  bottom: 0;
+  font-size: 16px;
+  padding-left: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
