Add web player container

--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -5,3 +5,11 @@
 #artist-photo {
   height: 200px;
 }
+
+.signed-in-home-container {
+  
+}
+
+.header-bar-container {
+  background-color: pink;
+}
