--- a/app/assets/stylesheets/tracks_index.scss
+++ b/app/assets/stylesheets/tracks_index.scss
@@ -1,84 +1,84 @@
-.home-wrapper {
-  display: flex;
-  flex-direction: column;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 25px;
-}
+// .home-wrapper {
+//   display: flex;
+//   flex-direction: column;
+//   font-family: 'Montserrat', sans-serif;
+//   font-size: 25px;
+// }
 
-.home-container {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: stretch;
-}
+// .home-container {
+//   width: 100%;
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: stretch;
+// }
 
-.main-container {
-  width: 85%;
-  display: flex;
-  flex-direction: column;
-}
+// .main-container {
+//   width: 85%;
+//   display: flex;
+//   flex-direction: column;
+// }
 
-.sidebar-container {
-  background-color: black;
-  color: white;
-  width: 15%;
-}
+// .sidebar-container {
+//   background-color: black;
+//   color: white;
+//   width: 15%;
+// }
 
-.tracks-container {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(26, 25, 25);
-  font-size: 16px;
-  overflow-y: scroll;
-  padding-top: 15px;
-  padding-bottom: 20px;
-}
+// .tracks-container {
+//   display: flex;
+//   flex-direction: column;
+//   background-color: rgb(26, 25, 25);
+//   font-size: 16px;
+//   overflow-y: scroll;
+//   padding-top: 15px;
+//   padding-bottom: 20px;
+// }
 
-.album-photo {
-  background-color: rgb(73, 3, 3);
-  color: white;
-  height: 150px;
-}
+// .album-photo {
+//   background-color: rgb(73, 3, 3);
+//   color: white;
+//   height: 150px;
+// }
 
-.single-track-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
+// .single-track-container {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   margin-top: 10px;
+//   margin-bottom: 10px;
+//   padding-top: 15px;
+//   padding-bottom: 15px;
+// }
 
-.single-track-container:hover {
-  background-color: rgb(59, 59, 59);
-  transition-duration: .2s;
-  transition-timing-function: linear;
-}
+// .single-track-container:hover {
+//   background-color: rgb(59, 59, 59);
+//   transition-duration: .2s;
+//   transition-timing-function: linear;
+// }
 
-.track-name {
-  color: white;
-  width: 225px;
-  padding-left: 15px;
-}
+// .track-name {
+//   color: white;
+//   width: 225px;
+//   padding-left: 15px;
+// }
 
-.track-length {
-  color: white;
-  padding-left: 0;
-}
+// .track-length {
+//   color: white;
+//   padding-left: 0;
+// }
 
-.webplayer-container {
-  background-color: #181818;
-  border-top: 1px solid #282828;
-  height: 90px;
-  width: 100%;
-  min-width: 620px;
-  position: fixed;
-  bottom: 0;
-  font-size: 16px;
-  padding-left: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
+// .webplayer-container {
+//   background-color: #181818;
+//   border-top: 1px solid #282828;
+//   height: 90px;
+//   width: 100%;
+//   min-width: 620px;
+//   position: fixed;
+//   bottom: 0;
+//   font-size: 16px;
+//   padding-left: 20px;
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: space-between;
+//   align-items: center;
+// }
