Add artist name to web player

--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -5,14 +5,51 @@
 
 #sidebar-logo {
   width: 80%;
+  position: absolute;
+  top: 30px;
+  left: 12px;
+  right: 10px;
+  z-index: 3;
 }
 
 #artist-photo {
   height: 200px;
 }
 
+.sidebar-container {
+  display: flex;
+  flex-direction: column;
+  width: 15%;
+  height: 100vh;
+  margin-right: 250px;
+  position: fixed;
+  background-color: black;
+  z-index: 2;
+}
+
 .header-bar-container {
   background-color: pink;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row-reverse;
+  position: fixed;
+  height: 60px;
+  width: 85%;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  top: 0;
+  left: 15%;
+  z-index: 2;
+}
+
+.main-container {
+  background-color: rgb(26, 25, 25);
+  width: 85%;
+  position: absolute;
+  right: 0;
+  top: 70px;
+  padding-bottom: 100px;
 }
 
 .webplayer-container {
@@ -29,4 +66,5 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  z-index: 3;
 }
