Add album cover and artist to webplayer

--- a/app/assets/stylesheets/web_player.scss
+++ b/app/assets/stylesheets/web_player.scss
@@ -24,6 +24,11 @@
   color: black;
 }
 
+.webplayer-album img {
+  width: 56px;
+  height: 56px;
+}
+
 .webplayer-details {
   display: flex;
   flex-direction: column;
