Fix web player display

--- a/app/assets/stylesheets/web_player.scss
+++ b/app/assets/stylesheets/web_player.scss
@@ -20,8 +20,7 @@
 .webplayer-album {
   width: 56px;
   height: 56px;
-  background-color: lightgray;
-  color: black;
+  background-color: #181818;
 }
 
 .webplayer-album img {
