Semi complete album:show styling

--- a/app/assets/stylesheets/album_show.scss
+++ b/app/assets/stylesheets/album_show.scss
@@ -21,7 +21,7 @@
 }
 
 .tracks-header p:first-child {
-  margin-left: 15px;
+  margin-left: 30px;
   margin-right: 45px;
 }
 
@@ -34,6 +34,58 @@
   margin-top: 70px;
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-left: 20px;
   display: flex;
   color: white;
+  background: linear-gradient(transparent,rgb(59,59,59));
+  background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgb(59,59,59)));
+
+  img {
+    box-shadow: 
+      0 1px 1px rgba(0, 0, 0, 0.15),
+      0 2px 2px rgba(0, 0, 0, 0.15),
+      0 4px 4px rgba(0, 0, 0, 0.15),
+      0 8px 8px rgba(0, 0, 0, 0.15),
+      0 16px 16px rgba(0, 0, 0, 0.15),
+      0 32px 32px rgba(0, 0, 0, 0.15);
+  }
+}
+
+.album-details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  margin-left: 20px;
+
+  p {
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+
+  p:first-child {
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    margin-bottom: 5px;
+  }
+
+  p:last-child {
+    font-weight: 400;
+  }
+
+  h1 {
+    font-weight: 700;
+    font-size: 72px;
+    line-height: 72px;
+    letter-spacing: -.04em;
+    margin-bottom: 15px;
+  }
+
+  span {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    display: flex;
+  }
 }
