--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -4,8 +4,7 @@
   align-items: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 15px;
 }
 
 .single-track-container:hover {
