--- a/app/assets/stylesheets/album_show.scss
+++ b/app/assets/stylesheets/album_show.scss
@@ -37,8 +37,7 @@
   padding-left: 20px;
   display: flex;
   color: white;
-  background: linear-gradient(transparent,rgb(59,59,59));
-  background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgb(59,59,59)));
+  background: linear-gradient(120deg, #1db954, #191414);
 
   img {
     box-shadow: 
