--- a/app/assets/stylesheets/artist_show.scss
+++ b/app/assets/stylesheets/artist_show.scss
@@ -42,3 +42,33 @@
     line-height: 16px;
   }
 }
+
+.albums-container {
+  background-color: rgb(26, 25, 25);
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  // overflow-y: scroll;
+  margin-top: 15px;
+  padding-bottom: 15px;
+  padding: 0 25px;
+  padding-left: 0;
+}
+
+.single-album-container {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  img {
+    padding-bottom: 10px;
+  }
+}
+
+.link, .link:visited {
+  text-decoration: none;
+  color: white;
+}
