--- a/app/assets/stylesheets/artist_show.scss
+++ b/app/assets/stylesheets/artist_show.scss
@@ -45,6 +45,7 @@
 
 .albums-container {
   background-color: rgb(26, 25, 25);
+  color: white;
   display: flex;
   flex-direction: column;
   font-size: 16px;
@@ -65,6 +66,10 @@
 
   img {
     padding-bottom: 10px;
+  }
+
+  p {
+    padding-top: 10px;
   }
 }
 
