--- a/app/assets/stylesheets/artist_show.scss
+++ b/app/assets/stylesheets/artist_show.scss
@@ -59,10 +59,10 @@
 .single-album-container {
   padding-top: 20px;
   padding-bottom: 10px;
-  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 16px;
 
   img {
     padding-bottom: 10px;
