--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -136,8 +136,22 @@
   }
 }
 
-.albums-index-container {
+.albums-index-container, .artists-index-container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+
+.single-artist-container {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 16px;
+
+  img {
+    padding-bottom: 10px;
+    max-height: 300px;
+  }
 }
