Add hovering for individual track play buttons

--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -15,6 +15,10 @@
 
 .track-button {
   margin-right: 15px;
+  background: transparent;
+  color: white;
+  outline: none;
+  border: none;
 }
 
 .track-button:hover {
