--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -22,6 +22,7 @@
   width: 15%;
   height: 100vh;
   margin-right: 250px;
+  margin-right: 0;
   position: fixed;
   background-color: black;
   z-index: 2;
