--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -21,7 +21,7 @@
   flex-direction: column;
   width: 15%;
   height: 100vh;
-  margin-right: 250px;
+  // margin-right: 250px;
   margin-right: 0;
   position: fixed;
   background-color: black;
