--- a/app/assets/stylesheets/web_player.scss
+++ b/app/assets/stylesheets/web_player.scss
@@ -5,7 +5,7 @@
 .webplayer-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0 16px;
   color: white;
   overflow-x: scroll;
@@ -14,7 +14,11 @@
 .webplayer-info {
   display: flex;
   align-items: center;
-  width: 400px;
+  min-width: 400px;
+  width: 30%;
+  position: absolute;
+  left: 0;
+  margin-left: 25px;
 }
 
 .webplayer-album {
@@ -45,11 +49,12 @@
 }
 
 .controls-container {
-  width: 500px;
-  min-width: 400px;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  left: 370px;
 }
 
 .buttons-container {
@@ -110,7 +115,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 400px;
+  width: 15%;
+  position: absolute;
+  right: 0px;
+  margin-right: 50px;
 }
 
 .volume-container p {
@@ -125,6 +133,7 @@
   height: 4px;
   background-color: rgb(184, 183, 183);
   outline: none;
+  width: 100%;
 }
 
 .seekbar-container input[type=range] {
@@ -136,3 +145,8 @@
 .seekbar-container input[type=range]:hover, .volume-container input[type=range]:hover {
   cursor: pointer;
 } 
+
+audio {
+  position: fixed;
+  right: 0;
+}
