Add links to artist name on album:show

--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -163,6 +163,7 @@
 .artists-index, .albums-index, .playlists-index {
   padding: 10px;
   padding-left: 20px;
+  padding-top: 20px;
   color: white;
 
   h1 {
