--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -6,10 +6,12 @@
 .sidebar-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 15%;
   height: 100vh;
   position: fixed;
   background-color: black;
+  color: white;
   z-index: 2;
 
   #sidebar-logo {
@@ -23,6 +25,7 @@
 
   .sidebar-home, .sidebar-library, .sidebar-create {
     display: flex;
+    left: 25px;
 
     :hover {
       background-color: rgb(59, 59, 59);
@@ -35,7 +38,10 @@
     .link, .create-wrapper{
       display: flex;
       align-items: center;
-      margin-left: 20px;
+    }
+
+    .create-wrapper {
+      left: 25px;
     }
     
     #home-icon, #library-icon, #create-icon {
@@ -57,25 +63,44 @@
   }
 
   .sidebar-home {
-    margin-bottom: 20px;
     position: absolute;
-    top: 120px;
+    top: 150px;
   }
 
   .sidebar-library {
     position: absolute;
-    top: 160px;
+    top: 200px;
   }
 
   .create-wrapper {
     position: absolute;
-    top: 200px;
+    top: 250px;
     cursor: pointer;
     padding-left: 1px;
     
     p {
       margin-left: 4px;
     }
+  }
+
+  .sidebar-playlists {
+    font-size: 14px;
+  }
+}
+
+.sidebar-playlist-wrapper {
+  border-top: white 1px solid;
+  padding-top: 30px;
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: fixed;
+  top: 330px;
+  left: 25px;
+
+  li {
+    margin-bottom: 15px;
   }
 }
 
