--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -59,9 +59,25 @@
     margin: 0 auto;
     padding: 10px;
     cursor: pointer;
+    z-index: 3;
   }
 
   .hidden {
     display: none;
+  }
+
+  #add {
+      font-weight: 600;
+    }
+
+  .track-dropdown-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 20px;
+    
+    li {
+      padding-bottom: 15px;
+    }
   }
 }
