Fix track dropdown menu position

--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -39,6 +39,8 @@
 
 .track-options-container {
   color: white;
+  position: absolute;
+  right: 150px;
 
   .track-options{
     position: relative;
