--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <meta property="og:title" content="Mockify" />
+    <meta property="og:image" content="<%= image_url("splash_praise.jpg") %>" /> 
+    <meta property="og:description" 
+      content="Mockify is a clone of the online music streaming app, Spotify, with slight twists to incorporate personal style, as well as including some of my favorite music. Users can explore the artists and albums pages available while playing music continouously, and can create their own playlists with songs that they want to come back to again."
+    />
+    <meta property="og:url"
+      content="https://mockify-app.herokuapp.com/#/"
+    />
+
     <script type="text/javascript">
       window.logoDarkURL = "<%= image_url('logo_dark.png') %>";
       window.githubURL = "<%= image_url('github.png') %>";
