--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -1,7 +1,8 @@
 .playlist-show-container {
   background-color: rgb(26, 25, 25);
   color: white;
-  height: 100vh;
+  // height: 100vh;
+  height: 70vh;
   overflow-y: scroll;
   margin-top: 70px;
   padding-top: 20px;
