Reposition add to playlist dropdown

--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -53,6 +53,8 @@
   .track-dropdown {
     font-size: 14px;
     position: absolute;
+    right: 25px;
+    bottom: 25px;
     background-color: #282828;
     box-shadow: 0 16px 24px rgba(0, 0, 0, .3), 0 6px 8px rgba(0,0,0,.2);
     outline: none;
