Add header text for playlist

--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -22,8 +22,8 @@
   }
 }
 
-.playlist-listing {
-  display: flex;
-  flex-direction: column;
-  padding-left: 25px;
-}
+// .playlist-listing {
+//   display: flex;
+//   flex-direction: column;
+//   padding-left: 25px;
+// }
