--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -17,13 +17,40 @@
   }
 
   li {
-    list-style-type: decimal;
     padding-bottom: 15px;
   }
 }
 
-// .playlist-listing {
-//   display: flex;
-//   flex-direction: column;
-//   padding-left: 25px;
-// }
+.playlist-tracks-header {
+  color: white;
+  border-bottom: 1px solid #4e4e4e;
+  display: flex;
+  justify-content: flex-start;
+  padding: 0 25px;
+  padding-bottom: 10px;
+  font-size: 14px;
+  margin-top: 15px;
+
+  p:first-child {
+    margin-left: 13px;
+    margin-right: 35px;
+  }
+
+  p:nth-child(3) {
+    margin-left: 190px;
+    margin-right: 200px;
+  }
+
+  p:last-child {
+    position: absolute;
+    right: 50px;
+  }
+}
+
+.playlist-track-id {
+  margin-right: 20px;
+}
+
+.playlist-album-name {
+  margin-right: 160px;
+}
