--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -3,10 +3,10 @@
   color: white;
   // height: 100vh;
   height: 70vh;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   margin-top: 70px;
   padding-top: 20px;
-  padding-bottom: 20px;
+  // padding-bottom: 20px;
   padding-left: 20px;
   display: flex;
   flex-direction: column;
@@ -14,11 +14,16 @@
   h1 {
     font-weight: 600;
     margin-bottom: 50px;
+    // position: sticky;
   }
 
   li {
     padding-bottom: 15px;
   }
+}
+
+.playlist-tracks-wrapper {
+  overflow-y: scroll;
 }
 
 .playlist-tracks-header {
@@ -44,6 +49,10 @@
     width: 300px;
   }
 
+  p:nth-child(4) {
+    width: 350px;
+  }
+
   p:last-child {
     position: absolute;
     right: 50px;
@@ -61,4 +70,8 @@
 
 .playlist-album-name {
   width: 300px;
+}
+
+.playlist-artist-name {
+  width: 350px;
 }
