--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -1,6 +1,7 @@
 .signed-in-home-container {
   font-family: 'Montserrat', sans-serif;
   font-size: 25px;
+  height: 100vh;
 }
 
 .sidebar-container {
@@ -178,7 +179,8 @@
   width: 85%;
   position: absolute;
   right: 0;
-  padding-bottom: 100px;
+  // padding-bottom: 100px;
+  // height: 100vh;
 }
 
 .webplayer-container {
