--- a/app/assets/stylesheets/album_show.scss
+++ b/app/assets/stylesheets/album_show.scss
@@ -5,7 +5,8 @@
   font-size: 16px;
   overflow-y: scroll;
   padding-top: 15px;
-  padding-bottom: 15px;
+  // padding-bottom: 15px;
+  padding-bottom: 100px;
   padding: 0 25px;
 }
 
