--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -1,7 +1,7 @@
 .signed-in-home-container {
   font-family: 'Montserrat', sans-serif;
   font-size: 25px;
-  height: 100vh;
+  // height: 100vh;
 }
 
 .sidebar-container {
@@ -179,14 +179,14 @@
   width: 85%;
   position: absolute;
   right: 0;
-  // padding-bottom: 100px;
-  // height: 100vh;
+  padding-bottom: 100px;
 }
 
 .webplayer-container {
   background-color: #181818;
   border-top: 1px solid #282828;
-  height: 90px;
+  // height: 90px;
+  height: 10vh;
   width: 100%;
   min-width: 620px;
   position: fixed;
