Add hover effect for sidebar playlist

--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -92,7 +92,7 @@
 .sidebar-playlist-wrapper {
   border-top: white 1px solid;
   padding-top: 30px;
-  width: 10%;
+  width: 11%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -101,7 +101,15 @@
   left: 25px;
 
   li {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
+  }
+
+  li:hover {
+    background-color: rgb(59, 59, 59);
+    transition-duration: .2s;
+    transition-timing-function: linear;
+    padding: 10px;
+    border-radius: 10px;
   }
 }
 
