Add album cover for playlist tracks

--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -40,19 +40,19 @@
   }
 
   p:nth-child(2) {
-    width: 400px;
+    width: 420px;
   }
 
   p:nth-child(3) {
-    width: 300px;
+    width: 290px;
   }
 
   p:nth-child(4) {
-    width: 350px;
+    width: 340px;
   }
 
   p:last-child {
-    width: 33px;
+    width: 35px;
     display: flex;
     justify-content: center;
   }
@@ -64,7 +64,12 @@
 
 .playlist-track-name {
   color: white;
-  width: 400px;
+  width: 350px;
+}
+
+.playlist-album-art {
+  width: 50px;
+  margin-right: 20px;
 }
 
 .playlist-album-name {
