--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -1,7 +1,6 @@
 .signed-in-home-container {
   font-family: 'Montserrat', sans-serif;
   font-size: 25px;
-  // height: 100vh;
 }
 
 .sidebar-container {
@@ -187,7 +186,15 @@
   width: 85%;
   position: absolute;
   right: 0;
-  padding-bottom: 100px;
+  // padding-bottom: 100px;
+  height: 90vh;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .webplayer-container {
