--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -1,12 +1,12 @@
 .playlist-show-container {
   background-color: rgb(26, 25, 25);
   color: white;
-  height: 80vh;
+  // height: 80vh;
   overflow-y: scroll;
   margin-top: 70px;
-  padding-top: 20px;
+  // padding-top: 20px;
   // padding-bottom: 20px;
-  padding-left: 20px;
+  // padding-left: 20px;
   display: flex;
   flex-direction: column;
 
@@ -18,6 +18,16 @@
   li {
     padding-bottom: 15px;
   }
+}
+
+.playlist-info {
+  // margin-top: 70px;
+  // padding-top: 20px;
+  // padding-bottom: 20px;
+  // padding-left: 20px;
+  display: flex;
+  color: white;
+  background: linear-gradient(120deg, #1db954, #191414);
 }
 
 .playlist-tracks-header {
