--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -21,20 +21,18 @@
 }
 
 .playlist-info {
-  // margin-top: 70px;
-  // padding-top: 20px;
-  // padding-bottom: 20px;
-  // padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
   display: flex;
   color: white;
   background: linear-gradient(120deg, #1db954, #191414);
 }
 
 .playlist-art {
-  width: 225px;
-  height: 225px;
+  width: 230px;
+  height: 230px;
   background-color: grey;
-  opacity: 0.8;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,6 +49,35 @@
     color: black;
     font-size: 70px;
   }
+
+  ul {
+    width: 230px;
+    height: 230px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    row-gap: 0px;
+
+    box-shadow: 
+    0 1px 1px rgba(0, 0, 0, 0.15),
+    0 2px 2px rgba(0, 0, 0, 0.15),
+    0 4px 4px rgba(0, 0, 0, 0.15),
+    0 8px 8px rgba(0, 0, 0, 0.15),
+    0 16px 16px rgba(0, 0, 0, 0.15),
+    0 32px 32px rgba(0, 0, 0, 0.15);
+
+    li {
+      padding: 0px;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.playlist-details {
+  padding-left: 20px;
 }
 
 .playlist-tracks-header {
