Fix playlist art styling

--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -32,6 +32,7 @@
 .playlist-art {
   width: 230px;
   height: 230px;
+  margin-bottom: 10px;
   background-color: grey;
   display: flex;
   justify-content: center;
