--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -33,7 +33,7 @@
   width: 230px;
   height: 230px;
   margin-bottom: 10px;
-  background-color: grey;
+  background-color: rgba(128, 128, 128, 0.685);
   display: flex;
   justify-content: center;
   align-items: center;
