--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -82,7 +82,6 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-end;
-  // padding-left: 20px;
   margin-left: 20px;
 
   p {
@@ -94,7 +93,6 @@
     font-weight: 700;
     font-size: 12px;
     line-height: 16px;
-    margin-bottom: 5px;
   }
 
   p:last-child {
@@ -106,7 +104,8 @@
     font-size: 72px;
     line-height: 72px;
     letter-spacing: -.04em;
-    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-bottom: 20px;
   }
 
   span {
@@ -114,6 +113,11 @@
     font-size: 14px;
     line-height: 16px;
     display: flex;
+  }
+
+  #edit-playlist, #delete-playlist {
+    font-size: 12px;
+    padding-bottom: 2px;
   }
 }
 
