--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -99,13 +99,27 @@
     font-weight: 400;
   }
 
-  h1 {
+  // h1 {
+  //   font-weight: 700;
+  //   font-size: 72px;
+  //   line-height: 72px;
+  //   letter-spacing: -.04em;
+  //   margin-top: 10px;
+  //   margin-bottom: 20px;
+  // }
+
+  input {
+    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 72px;
     line-height: 72px;
     letter-spacing: -.04em;
     margin-top: 10px;
     margin-bottom: 20px;
+    background-color: transparent;
+    color: white;
+    border: none;
+    border-style: none;
   }
 
   span {
