--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -119,7 +119,7 @@
     background-color: transparent;
     color: white;
     border: none;
-    border-style: none;
+    outline: none;
   }
 
   span {
