--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -124,9 +124,10 @@
     display: flex;
   }
 
-  #edit-playlist, #delete-playlist {
+  #delete-playlist {
     font-size: 12px;
     padding-bottom: 2px;
+    cursor: pointer;
   }
 }
 
