--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -67,14 +67,15 @@
     top: 150px;
   }
 
-  .sidebar-library {
-    position: absolute;
-    top: 200px;
-  }
+  // .sidebar-library {
+  //   position: absolute;
+  //   top: 200px;
+  // }
 
   .create-wrapper {
     position: absolute;
-    top: 250px;
+    // top: 250px;
+    top: 200px;
     cursor: pointer;
     padding-left: 1px;
     
@@ -96,7 +97,8 @@
   flex-direction: column;
   align-items: flex-start;
   position: fixed;
-  top: 330px;
+  // top: 330px;
+  top: 250px;
   left: 25px;
 
   li {
