Change featured albums style

--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -242,10 +242,14 @@
   transition-timing-function: linear;
 }
 
-.albums-index-container, .artists-index-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+.artists-index-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+
+.albums-index-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
 }
 
 .single-artist-container {
