Add hover effect for single featured artist

--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -269,3 +269,10 @@
     max-height: 300px;
   }
 }
+
+.single-artist-container:hover {
+  background-color: rgba(26, 25, 25, 0.61);
+  transition-duration: .2s;
+  transition-timing-function: linear;
+  border-radius: 8px;
+}
