--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -242,14 +242,9 @@
   transition-timing-function: linear;
 }
 
-.artists-index-container {
+.albums-index-container, .artists-index-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
-}
-
-.albums-index-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
 }
 
 .single-artist-container {
