--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -70,7 +70,7 @@
   outline: none;
   white-space: normal;
   margin: 20px;
-  margin-top: 2px;
+  margin-top: 25px;
   margin-bottom: 30px;
   padding: 16px 48px 18px;
   min-width: 160px;
@@ -123,4 +123,8 @@
 .session-errors {
   margin-left: 10px;
   color: red;
+}
+
+.error-item {
+  padding-bottom: 10px;
 }
