--- a/app/assets/stylesheets/web_player.scss
+++ b/app/assets/stylesheets/web_player.scss
@@ -5,10 +5,10 @@
 .webplayer-wrapper {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   padding: 0 16px;
   color: white;
-  overflow-x: scroll;
+  width: 100%;
 }
 
 .webplayer-info {
@@ -53,8 +53,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  left: 370px;
 }
 
 .buttons-container {
