--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -3,3 +3,24 @@
   padding-top: 20px;
   padding-left: 20px;
 }
+
+.search-bar {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: start;
+  text-overflow: ellipsis;
+  box-sizing: border-box;
+  border-top-style: none;
+  border-bottom-style: none;
+  border-left-style: none;
+  border-right-style: none;
+  outline: none;
+  width: 364px;
+  height: 40px;
+  padding-bottom: 6px;
+  padding-top: 6px;
+  padding-left: 48px;
+  padding-right: 48px;
+  border-radius: 30px;
+}
