Change track button width

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -68,7 +68,11 @@
 }
 
 #search-track-container {
-  padding: 8px;
+  padding: 0px;
+}
+
+#search-track-button {
+  width: 35px;
 }
 
 .search-album-art {
