Style search result tracks

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -77,21 +77,23 @@
 
 .search-album-art {
   width: 50px;
+  margin-right: 20px;
 }
 
 .search-track-name {
   color: white;
-  // font-size: 16px;
+  width: 343px;
 }
 
 .search-album-name {
-
+  width: 290px;
 }
 
 .search-artist-name {
-
+  width: 275px;
 }
 
 .search-track-length {
   color: white;
+  width: 100px;
 }
